--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "https://github.com/zfchung/tdd-kata-22-Aug-2021.git",
   "author": "ZF Chung (Zack) <zfchung1@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "typescript": "^4.3.5"
+  }
 }
