--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "author": "ZF Chung (Zack) <zfchung1@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "run": "node ./dist",
+    "start": "node ./dist",
+    "dev": "ts-node ./src",
     "build": "tsc"
   },
   "dependencies": {
     "typescript": "^4.3.5"
+  },
+  "devDependencies": {
+    "ts-node": "^10.2.1"
   }
 }
