--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.1",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1"
   }
 }
