--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tdd-kata-22-Aug-2021",
+  "name": "tdd-kata-23-Aug-2021-pair-programming",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/zfchung/tdd-kata-22-Aug-2021.git",
+  "repository": "https://github.com/zfchung/tdd-kata-23-Aug-2021-pair-programming.git",
   "author": "ZF Chung (Zack) <zfchung1@gmail.com>",
   "license": "MIT",
   "scripts": {
